--- a/01_basic_training.ipynb
+++ b/01_basic_training.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Basic Training\n",
-    "UC Berkeley Python Bootcamp"
+    "\n",
+    "Kids Coding (Quarantine 2020)"
    ]
   },
   {
@@ -19,15 +20,99 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computers \n",
+    "\n",
+    "The Four Main components of computers is \n",
+    "\n",
+    "  - Input \n",
+    "  - Storage \n",
+    "  - Processing\n",
+    "  - Output\t\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data is stored in binary -- think of this as on/off, true/false, or 1/0. Anything can be stored like this: numbers, pictures, sound, text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bin(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bin(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int('01100000', 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 & 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int.from_bytes(\"a\".encode(), \"big\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Calculator #\n",
+    "# Python as a Calculator #\n",
     "\n",
-    "> there are `int` and `float` (but not doubles)"
+    "> there are numerical types called `int` and `float`"
    ]
   },
   {
@@ -81,19 +166,6 @@
    "outputs": [],
    "source": [
     "2.1 + 2 == 4.0999999999999996"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%run talktools"
    ]
   },
   {
@@ -282,52 +354,6 @@
    "outputs": [],
    "source": [
     "2.5 // 2 # egad, dont do this."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is also `complex` types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "complex(1,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "1+2j"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "1 + 2j - 2j"
    ]
   },
   {
@@ -2219,7 +2245,7 @@
     }
    },
    "source": [
-    "UC Berkeley Python Bootcamp - Basic Training\n",
+    "Originally from UC Berkeley Python Bootcamp - Basic Training\n",
     "(c) J. Bloom 2008-2016 All Rights Reserved"
    ]
   },
